# COS214_P3

./: .gitignore  A_OpenField.cpp  A_OpenField.h  A_Riverbank.cpp  A_Riverbank.h  A_Woodland.cpp  A_Woodland.h  Ambush.cpp  Ambush.h  Artillery.cpp  Artillery.h  BattleStrategy.cpp  BattleStrategy.h  CMakeLists.txt  C_OpenField.cpp  C_OpenField.h  C_Riverbank.cpp  C_Riverbank.h  C_Woodland.cpp  C_Woodland.h  Cavalry.cpp  Cavalry.h  DemoMain.cpp  Flanking.cpp  Flanking.h  Fortification.cpp  Fortification.h  I_OpenField.cpp  I_OpenField.h  I_Riverbank.cpp  I_Riverbank.h  I_Woodland.cpp  I_Woodland.h  Infantry.cpp  Infantry.h  Legion.cpp  Legion.h  LegionFactory.cpp  LegionFactory.h  LegionUnit.cpp  (+18 more)
